control-plane/manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    external-dns.alpha.kubernetes.io/hostname: argocd.tineochristopher.com
    external-dns.alpha.kubernetes.io/target: "96.248.109.98"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd.tineochristopher.com
    secretName: argocd-server-tls
  rules:
  - host: argocd.tineochristopher.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
